src/views/pages/Dashboard/DashBoard.css
/* ... */
.member-icon.lg {
  height: 48px;
  width: 48px;
  line-height: 48px;
  font-size: 24px;
}

.member-row {
  display: flex;
  align-items: center;
  border-bottom: 1px solid #EAEFF4;
  height: 90px;
  margin-right: -32px;
  padding-right: 22px;
  margin-left: -32px;
  padding-left: 32px;
}

.add-skill {
  background-image: linear-gradient( 89.8deg,  rgba(39,115,255,1) 4.3%, rgba(62,211,232,1) 101.4% ) !important;
/*  background-color: #8EC5FC !important;
  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%) !important;*/
  color: #fff !important;
}
/*.MuiCardActionArea-root-29:hover .MuiCardActionArea-focusHighlight-31{
  opacity: 0.1 !important;
}*/
.add-skill h2{
  font-weight: lighter;
}

.board-container-body {
  overflow: hidden;
  display: flex;
  flex: 1 1 auto;
  min-width: 0;
  min-height: 0;
  position: relative;
  height: 100%;
  width: 100%;
}

.board-container-body-inner {
  display: flex;
  padding: 0;
  flex: 1 1 auto;
  min-width: 0;
}

.main-lists {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  position: relative;
}

.main-lists::-webkit-scrollbar,
.main-lists ::-webkit-scrollbar {
  height: 8px;
}

.main-lists::-webkit-scrollbar {
  height: 40px;
  background-color: #fff;
  border-top: 1px solid #dfe3ed;
}

.main-lists::-webkit-scrollbar-thumb {
  background-color: #d7dee5;
  border-top: 16px solid transparent;
  border-bottom: 16px solid transparent;
  background-clip: padding-box;
}

.main-lists::-webkit-scrollbar-thumb:hover {
  background-color: #c8d1db;
}

.main-lists ::-webkit-scrollbar-thumb {
  border-right: 8px solid transparent;
  background-clip: padding-box;
  background-color: #eaeef3;
}

.main-lists ::-webkit-scrollbar-thumb:hover {
  background-color: #dae1ea;
}

.main-lists::-webkit-scrollbar-button {
  display: block;
  background: none;
  border-width: 0;
  width: 16px;
  pointer-events: none;
  opacity: 0;
  visibility: hidden;
}

.main-lists-inner {
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

::-webkit-scrollbar,
::-webkit-scrollbar {
  width: 4px;
}

::-webkit-scrollbar {
  height: 40px;
  background-color: #fff;
  border-top: 1px solid #dfe3ed;
}

::-webkit-scrollbar-thumb {
  background-color: #d7dee5;
  background-clip: padding-box;
}
::-webkit-scrollbar-thumb:hover{
  background-color: darken(#d7dee5, 5);
}

.main-list-add {
  -ms-flex-item-align: start;
  align-self: flex-start;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 0;
  margin: 13px 27px;
}

.main-lists-inner {
  flex: 0 0 auto;
  min-width: 0;
  display: flex;
  position: relative;
}

.main-list {
  width: 384px;
  background-color: #fff;
  border-right: 1px solid #dfe3ed;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 100%;
  overflow: hidden;
  min-height: 118px;
}

.main-list,
.main-lists-inner {
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  min-width: 0;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.main-list-header {
  flex: 0 0 auto;
  padding: 17px 19px 13px 32px;
  display: flex;
  min-width: 0;
  position: relative;
  z-index: 2;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}

.main-list-header__main {
  flex: 1 1 auto;
  min-width: 0;
  padding-top: 10px;
  padding-bottom: 10px;
}

.main-list-header__title {
  font-weight: 600;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.main-list-header__aside {
  flex: 0 0 auto;
  min-width: 0;
  margin-left: 18px
}

.main-list-header.__scrolling {
  box-shadow: 0 0 1px 1px rgba(17, 49, 96, .08), 0 1px 3px 0 rgba(17, 49, 96, .08);
}
  .main-list-body {
    -webkit-box-flex: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
    min-width: 0;
    overflow-y: auto;
    overflow-x: hidden;
    max-height: 72vh;
    -webkit-overflow-scrolling: touch;
  }

  .main-list-body:first-child {
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
  }

  .main-list-body:last-child {
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
  }

  .main-list-body:last-child .main-list-body-inner {
    padding-bottom: 24px;
  }

  .main-list-body-inner {
    padding: 2px 32px 4px;
    width: 384px;
  }
.main-list-header+.main-list-footer{
  padding-top: 18px;
}

 .main-list-footer {
   padding: 23px 32px;
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
   min-width: 0;
   min-height: 0;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
   -webkit-justify-content: flex-end;
   -ms-flex-pack: end;
   justify-content: flex-end;
   position: relative;
   z-index: 2;
   -webkit-transition: -webkit-box-shadow .12s linear;
   transition: -webkit-box-shadow .12s linear;
   -o-transition: box-shadow .12s linear;
   transition: box-shadow .12s linear;
   transition: box-shadow .12s linear, -webkit-box-shadow .12s linear;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
 }

 .main-list-footer.__scrolling {
   -webkit-box-shadow: 0 -1px 0 0 #eaeff4;
   box-shadow: 0 -1px 0 0 #eaeff4;
 }

 .main-list-footer-left {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   min-width: 0;
 }

 .main-list-footer-center {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   min-width: 0;
   text-align: center;
 }

 .main-list-footer-right {
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 auto;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
   min-width: 0;
 }
/* ... */

